@@ -85,9 +85,9 @@ config.status.full: config.env.full config.sub config.guess
 	    --with-mail \
 	    --with-mail_ssl_module \
 	    --add-module=$(MODULESDIR)/nginx-auth-pam \
+	    --add-module=$(MODULESDIR)/nginx-dav-ext-module \
 	    --add-module=$(MODULESDIR)/nginx-echo \
 	    --add-module=$(MODULESDIR)/nginx-upstream-fair \
-	    --add-module=$(MODULESDIR)/nginx-dav-ext-module \
             $(CONFIGURE_OPTS) >$@
 	touch $@
 
@@ -157,9 +157,11 @@ config.status.extras: config.env.extras config.sub config.guess
 	    --with-md5=/usr/include/openssl \
 	    --with-mail \
 	    --with-mail_ssl_module \
-	    --add-module=$(MODULESDIR)/nginx-auth-pam \
 	    --add-module=$(MODULESDIR)/chunkin-nginx-module \
 	    --add-module=$(MODULESDIR)/headers-more-nginx-module \
+	    --add-module=$(MODULESDIR)/nginx-auth-pam \
+	    --add-module=$(MODULESDIR)/nginx-cache-purge \
+	    --add-module=$(MODULESDIR)/nginx-dav-ext-module \
 	    --add-module=$(MODULESDIR)/nginx-development-kit \
 	    --add-module=$(MODULESDIR)/nginx-echo \
 	    --add-module=$(MODULESDIR)/nginx-http-push \
@@ -167,7 +169,6 @@ config.status.extras: config.env.extras config.sub config.guess
 	    --add-module=$(MODULESDIR)/nginx-upload-module \
 	    --add-module=$(MODULESDIR)/nginx-upload-progress \
 	    --add-module=$(MODULESDIR)/nginx-upstream-fair \
-	    --add-module=$(MODULESDIR)/nginx-dav-ext-module \
             $(CONFIGURE_OPTS) >$@
 	touch $@
 
@@ -194,9 +195,9 @@ config.status.naxsi: config.env.naxsi config.sub config.guess
 	    --with-ipv6 \
 	    --with-http_stub_status_module \
 	    --with-http_realip_module \
-	    --add-module=$(MODULESDIR)/nginx-upstream-fair \
-	    --add-module=$(MODULESDIR)/nginx-cache-purge \
 	    --add-module=$(MODULESDIR)/naxsi/naxsi_src \
+	    --add-module=$(MODULESDIR)/nginx-cache-purge \
+	    --add-module=$(MODULESDIR)/nginx-upstream-fair \
 	    $(CONFIGURE_OPTS) >$@
 	touch $@
 
