@@ -4,8 +4,10 @@ nginx (1.2.6-2) UNRELEASED; urgency=low
   * debian/logrotate:
     + Set default log to keep for 52 weeks instead of 52 days. Thanks to
       RjY <rjy@users.sourceforge.net> for patch (Closes: #696440)
+  * debian/rules:
+    + Added cache purge module to nginx-extras.
 
- -- Kartik Mistry <kartik@debian.org>  Thu, 27 Dec 2012 15:12:26 +0530
+ -- Kartik Mistry <kartik@debian.org>  Wed, 16 Jan 2013 10:50:33 +0530
 
 nginx (1.2.6-1) unstable; urgency=low
 
